--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     default-property-inclusion: non_null
 
 logging:
-  file.name: ./logs/gpg.log
+  file.name: ./logs/bot.log
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %clr(%-5level) [%clr(%thread){blue}] - %cyan(%logger{50}) : %msg%n'
     file: '%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] - %logger{50} : %line - %msg%n'
