--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
     name: gradle build2Jar
-    runs-on: macos-latest # 14G memory
+    runs-on: macos-12 # 14G memory
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -43,10 +43,15 @@ jobs:
 
       # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
       # the publishing section of your build.gradle
-      - name: Publish to GitHub Packages
-        uses: gradle/gradle-build-action@v2
+#      - name: Publish to GitHub Packages
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          arguments: publish
+#        env:
+#          USERNAME: ${{ github.actor }}
+#          TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3
         with:
-          arguments: publish
-        env:
-          USERNAME: ${{ github.actor }}
-          TOKEN: ${{ secrets.RELEASE_TOKEN }}
+#          name: test
+          path: ./plugins/*
