ci: 自动打包脚本 doc: README.md
fix: 解决jdk自带DefaultHandler编译报错问题
refactor: 删除mylogger

--- a/.github/workflows/Gradle CI.yml
+++ b/.github/workflows/Gradle CI.yml
@@ -52,4 +52,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: plugins
-          path: ./plugins/KTBot-1.0.0.mirai2.jar
+          path: ./plugins/
