--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -17,14 +17,36 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      #      - name: Create Release
+      #        id: create_release
+      #        uses: actions/create-release@v1
+      #        env:
+      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      #        with:
+      #          tag_name: ${{ github.ref }}
+      #          release_name: ${{ github.ref }}
+      #          body: ""
+      #          draft: false
+      #          prerelease: true
+      #
+      #      - name: Upload Release Asset
+      #        uses: actions/upload-release-asset@v1
+      #        env:
+      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #        with:
+      #          upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #          asset_path: ./${{ secrets.ReleaseZipName }}.zip
+      #          asset_name: ${{ secrets.ReleaseZipName }}.zip
+      #          asset_content_type: application/zip
+      - name: Create Release and Upload Release Asset
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          body: ""
+          name: Release ${{ github.ref }}
+          body: TODO New Release.
           draft: false
           prerelease: true
+          files: |
+            ./gradle/wrapper/
+            LICENSE 
