--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -38,15 +38,15 @@ jobs:
       #          asset_path: ./${{ secrets.ReleaseZipName }}.zip
       #          asset_name: ${{ secrets.ReleaseZipName }}.zip
       #          asset_content_type: application/zip
+      - name: filter jar files
+        run: echo ::set-output name=TAG_NAME::$(echo ${find ./plugins -maxdepth 1 -type f -print})
       - name: Create Release and Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: ${{ github.ref }}
           name: Release ${{ github.ref }}
-          body: TODO New Release.
+          body: ''
           draft: false
           prerelease: true
-          files: |
-            ./gradle/wrapper/
-            LICENSE 
+          files: ${{ steps.vars.outputs.TAG_NAME }}
