--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -39,7 +39,8 @@ jobs:
       #          asset_name: ${{ secrets.ReleaseZipName }}.zip
       #          asset_content_type: application/zip
       - name: filter jar files
-        run: echo ::set-output name=TAG_NAME::$(echo ${find ./plugins -maxdepth 1 -type f -print})
+        run: |
+          echo ::set-output name=TAG_NAME::$(echo $(find ./plugins -maxdepth 1 -type f -print))
       - name: Create Release and Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
