--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -39,6 +39,7 @@ jobs:
       #          asset_name: ${{ secrets.ReleaseZipName }}.zip
       #          asset_content_type: application/zip
       - name: filter jar files
+        id: files
         run: |
           echo ::set-output name=TAG_NAME::$(echo $(find ./gradle/wrapper -maxdepth 1 -type f -print))
       - name: Create Release and Upload Release Asset
@@ -50,4 +51,4 @@ jobs:
           body: ''
           draft: true
           prerelease: true
-          files: ${{ steps.vars.outputs.TAG_NAME }}
+          files: ${{ steps.files.outputs.TAG_NAME }}
