--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -38,10 +38,6 @@ jobs:
       #          asset_path: ./${{ secrets.ReleaseZipName }}.zip
       #          asset_name: ${{ secrets.ReleaseZipName }}.zip
       #          asset_content_type: application/zip
-      - name: filter jar files
-        id: files
-        run: |
-          echo ::set-output name=TAG_NAME::$(echo $(ls -F ./gradle/wrapper | grep -v /))
       - name: Create Release and Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -51,4 +47,4 @@ jobs:
           body: ''
           draft: true
           prerelease: true
-          files: ${{ steps.files.outputs.TAG_NAME }}
+          files: ./gradle/wrapper/*
