--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -8,7 +8,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - '*'
+      - 'v*'
 
 jobs:
   build:
@@ -16,35 +16,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      #      - name: Create Release
-      #        id: create_release
-      #        uses: actions/create-release@v1
-      #        env:
-      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      #        with:
-      #          tag_name: ${{ github.ref }}
-      #          release_name: ${{ github.ref }}
-      #          body: ""
-      #          draft: false
-      #          prerelease: true
-      #
-      #      - name: Upload Release Asset
-      #        uses: actions/upload-release-asset@v1
-      #        env:
-      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #        with:
-      #          upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #          asset_path: ./${{ secrets.ReleaseZipName }}.zip
-      #          asset_name: ${{ secrets.ReleaseZipName }}.zip
-      #          asset_content_type: application/zip
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: gradle
+
+      # Validate Gradle Wrapper
+      - name: Gradle Wrapper Validation
+        uses: gradle/wrapper-validation-action@v1.0.3
+
+      - name: Make gradlew executable  #更改脚本权限
+        run: chmod +x ./gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew build2Jar
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: plugins
+          path: ./plugins/
+
       - name: Create Release and Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          tag_name: ${{ github.ref }}
           name: Release ${{ github.ref }}
           body: ''
           draft: true
           prerelease: true
-          files: ./gradle/wrapper/*
+          files: ./plugins/*
