--- a/.github/workflows/TagRelease.yml
+++ b/.github/workflows/TagRelease.yml
@@ -18,34 +18,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'temurin'
-          cache: gradle
+      #- name: Set up JDK 17
+      #  uses: actions/setup-java@v3
+      #  with:
+      #    java-version: 17
+      #    distribution: 'temurin'
+      #    cache: gradle
+      #
+      ## Validate Gradle Wrapper
+      #- name: Gradle Wrapper Validation
+      #  uses: gradle/wrapper-validation-action@v1.0.3
+      #
+      #- name: Make gradlew executable
+      #  run: chmod +x ./gradlew
+      #
+      #- name: Build with Gradle
+      #  run: ./gradlew build2Jar
 
-      # Validate Gradle Wrapper
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.3
-
-      - name: Make gradlew executable  #更改脚本权限
-        run: chmod +x ./gradlew
-
-      - name: Build with Gradle
-        run: ./gradlew build2Jar
-
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: plugins
-          path: ./plugins/
+      - name: Set outputs
+        id: vars
+        run: |
+          echo ::set-output name=TAG_NAME::$(echo ${GITHUB_REF:10})
 
       - name: Create Release and Upload Release Asset
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          tag_name: ${{ steps.vars.outputs.TAG_NAME }}
+          name: ${{ steps.vars.outputs.TAG_NAME }}
           body: ''
           draft: true
           prerelease: true
-          files: ./plugins/*
+          files: ./gradle/wrapper/*
