--- a/.github/workflows/build2Jar.yml
+++ b/.github/workflows/build2Jar.yml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: plugins
-          path: ./plugins/
+          path: ./plugins/*
