--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.36",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
