--- a/front/package.json
+++ b/front/package.json
@@ -43,7 +43,8 @@
     },
     "rules": {
       "vue/no-unused-components": "off",
-      "vue/no-unused-vars": "off"
+      "vue/no-unused-vars": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
